--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "4       Psoriasis  Psoriasis is a common skin disorder that forms..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "4                   salt baths  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +465,9 @@
     "    d = disease\n",
     "\n",
     "    # Print disease description\n",
+    "    print(\"The predicted disease is:\", d)\n",
+    "    print(\"What is\", d, \"?\")\n",
+    "    print(\" \")\n",
     "    print(df_2[df_2[\"Disease\"] == d][\"Description\"].item())\n",
     "\n",
     "    # Print Precautions to take\n",
@@ -477,13 +480,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The predicted disease is: Malaria\n",
+      " \n",
+      "What is Malaria ?\n",
       "An infectious disease caused by protozoan parasites from the Plasmodium family that can be transmitted by the bite of the Anopheles mosquito or by a contaminated needle or transfusion. Falciparum malaria is the most deadly type.\n",
       "Precautions to take are:\n",
       "Consult nearest hospital\n",
@@ -838,16 +844,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "symps = {\"Symptom_1\": \"vomiting\", \"Symptom_2\" : \"skin_rash\", \"Symptom_3\" : \"itching\",\"Symptom_4\" : np.nan,\"Symptom_5\" : np.nan,\"Symptom_6\" : np.nan,\"Symptom_7\" : np.nan,\"Symptom_8\" : np.nan,\"Symptom_9\" : np.nan,\"Symptom_10\" : np.nan,\"Symptom_11\" : np.nan, \"Symptom_12\" : np.nan,\"Symptom_13\" : np.nan,\"Symptom_14\" : np.nan,\"Symptom_15\" : np.nan, \"Symptom_16\" : np.nan,\"Symptom_17\" : np.nan,}"
+    "symps = {\"Symptom_1\": \"vomiting\", \"Symptom_2\" : \"skin_rash\", \"Symptom_3\" : \"itching\",\"Symptom_4\" : \"nodal_skin_eruptions\",\"Symptom_5\" : np.nan,\"Symptom_6\" : np.nan,\"Symptom_7\" : np.nan,\"Symptom_8\" : np.nan,\"Symptom_9\" : np.nan,\"Symptom_10\" : np.nan,\"Symptom_11\" : np.nan, \"Symptom_12\" : np.nan,\"Symptom_13\" : np.nan,\"Symptom_14\" : np.nan,\"Symptom_15\" : np.nan, \"Symptom_16\" : np.nan,\"Symptom_17\" : np.nan,}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +902,7 @@
        "      <td>vomiting</td>\n",
        "      <td>skin_rash</td>\n",
        "      <td>itching</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>nodal_skin_eruptions</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -916,17 +922,17 @@
        "</div>"
       ],
       "text/plain": [
-       "  Symptom_1  Symptom_2 Symptom_3  Symptom_4  Symptom_5  Symptom_6  Symptom_7  \\\n",
-       "0  vomiting  skin_rash   itching        NaN        NaN        NaN        NaN   \n",
+       "  Symptom_1  Symptom_2 Symptom_3             Symptom_4  Symptom_5  Symptom_6  \\\n",
+       "0  vomiting  skin_rash   itching  nodal_skin_eruptions        NaN        NaN   \n",
        "\n",
-       "   Symptom_8  Symptom_9  Symptom_10  Symptom_11  Symptom_12  Symptom_13  \\\n",
-       "0        NaN        NaN         NaN         NaN         NaN         NaN   \n",
+       "   Symptom_7  Symptom_8  Symptom_9  Symptom_10  Symptom_11  Symptom_12  \\\n",
+       "0        NaN        NaN        NaN         NaN         NaN         NaN   \n",
        "\n",
-       "   Symptom_14  Symptom_15  Symptom_16  Symptom_17  \n",
-       "0         NaN         NaN         NaN         NaN  "
+       "   Symptom_13  Symptom_14  Symptom_15  Symptom_16  Symptom_17  \n",
+       "0         NaN         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2022,28 +2028,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Paralysis_(brain_hemorrhage)'"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paralysis_(brain_hemorrhage)\n"
+     ]
     }
    ],
    "source": [
     "d = rfc_classifier.predict(standardized_test).item()\n",
-    "d"
+    "d = d.strip().replace(\" \", \"_\")\n",
+    "print(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2072,41 +2076,47 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Paralysis_(brain_hemorrhage)</td>\n",
+       "      <td>Intracerebral hemorrhage (ICH) is when blood s...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Disease, Description]\n",
-       "Index: []"
+       "                         Disease  \\\n",
+       "24  Paralysis_(brain_hemorrhage)   \n",
+       "\n",
+       "                                          Description  \n",
+       "24  Intracerebral hemorrhage (ICH) is when blood s...  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_2[df_2[\"Disease\"] == d]"
+    "df_2[df_2[\"Disease\"] == \"Paralysis_(brain_hemorrhage)\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "can only convert an array of size 1 to a Python scalar",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Zaynab\\GitHub\\Personal\\Disease symptom prediction\\Disease-Symptom-Prediction\\sympt.ipynb Cell 39\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#Y102sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m drug_info(d)\n",
-      "\u001b[1;32mc:\\Zaynab\\GitHub\\Personal\\Disease symptom prediction\\Disease-Symptom-Prediction\\sympt.ipynb Cell 39\u001b[0m line \u001b[0;36mdrug_info\u001b[1;34m(disease)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#Y102sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m d \u001b[39m=\u001b[39m disease\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#Y102sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Print disease description\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#Y102sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(df_2[df_2[\u001b[39m\"\u001b[39;49m\u001b[39mDisease\u001b[39;49m\u001b[39m\"\u001b[39;49m] \u001b[39m==\u001b[39;49m d][\u001b[39m\"\u001b[39;49m\u001b[39mDescription\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mitem())\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#Y102sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Print Precautions to take\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#Y102sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPrecautions to take are:\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\core\\base.py:349\u001b[0m, in \u001b[0;36mIndexOpsMixin.item\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    347\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m    348\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mnext\u001b[39m(\u001b[39miter\u001b[39m(\u001b[39mself\u001b[39m))\n\u001b[1;32m--> 349\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mcan only convert an array of size 1 to a Python scalar\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: can only convert an array of size 1 to a Python scalar"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intracerebral hemorrhage (ICH) is when blood suddenly bursts into brain tissue, causing damage to your brain. Symptoms usually appear suddenly during ICH. They include headache, weakness, confusion, and paralysis, particularly on one side of your body.\n",
+      "Precautions to take are:\n",
+      "massage\n",
+      "eat healthy\n",
+      "exercise\n",
+      "consult doctor\n"
      ]
     }
    ],
@@ -2116,25 +2126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "can only convert an array of size 1 to a Python scalar",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Zaynab\\GitHub\\Personal\\Disease symptom prediction\\Disease-Symptom-Prediction\\sympt.ipynb Cell 38\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#X65sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m drug_info(rfc_classifier\u001b[39m.\u001b[39;49mpredict(standardized_test)\u001b[39m.\u001b[39;49mitem())\n",
-      "\u001b[1;32mc:\\Zaynab\\GitHub\\Personal\\Disease symptom prediction\\Disease-Symptom-Prediction\\sympt.ipynb Cell 38\u001b[0m line \u001b[0;36mdrug_info\u001b[1;34m(disease)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#X65sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m d \u001b[39m=\u001b[39m disease\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#X65sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Print disease description\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#X65sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(df_2[df_2[\u001b[39m\"\u001b[39;49m\u001b[39mDisease\u001b[39;49m\u001b[39m\"\u001b[39;49m] \u001b[39m==\u001b[39;49m d][\u001b[39m\"\u001b[39;49m\u001b[39mDescription\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mitem())\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#X65sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Print Precautions to take\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#X65sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPrecautions to take are:\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\core\\base.py:349\u001b[0m, in \u001b[0;36mIndexOpsMixin.item\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    347\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m    348\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mnext\u001b[39m(\u001b[39miter\u001b[39m(\u001b[39mself\u001b[39m))\n\u001b[1;32m--> 349\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mcan only convert an array of size 1 to a Python scalar\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: can only convert an array of size 1 to a Python scalar"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "drug_info(rfc_classifier.predict(standardized_test).item())"
+    "#drug_info(rfc_classifier.predict(standardized_test).item())"
    ]
   },
   {
