--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,10 +465,11 @@
     "    d = disease\n",
     "\n",
     "    # Print disease description\n",
-    "    print(\"The predicted disease is:\", d)\n",
-    "    print(\"What is\", d, \"?\")\n",
+    "    print(\"The predicted disease is:\", d.strip().replace(\"_\", \" \"))\n",
     "    print(\" \")\n",
+    "    print(\"Description of\", d.strip().replace(\"_\", \" \"),\":\")\n",
     "    print(df_2[df_2[\"Disease\"] == d][\"Description\"].item())\n",
+    "    print(\" \")\n",
     "\n",
     "    # Print Precautions to take\n",
     "    print(\"Precautions to take are:\")\n",
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -489,8 +490,9 @@
      "text": [
       "The predicted disease is: Malaria\n",
       " \n",
-      "What is Malaria ?\n",
+      "Description of Malaria :\n",
       "An infectious disease caused by protozoan parasites from the Plasmodium family that can be transmitted by the bite of the Anopheles mosquito or by a contaminated needle or transfusion. Falciparum malaria is the most deadly type.\n",
+      " \n",
       "Precautions to take are:\n",
       "Consult nearest hospital\n",
       "avoid oily food\n",
@@ -2047,71 +2049,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Disease</th>\n",
-       "      <th>Description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Paralysis_(brain_hemorrhage)</td>\n",
-       "      <td>Intracerebral hemorrhage (ICH) is when blood s...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         Disease  \\\n",
-       "24  Paralysis_(brain_hemorrhage)   \n",
-       "\n",
-       "                                          Description  \n",
-       "24  Intracerebral hemorrhage (ICH) is when blood s...  "
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_2[df_2[\"Disease\"] == \"Paralysis_(brain_hemorrhage)\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The predicted disease is: Paralysis (brain hemorrhage)\n",
+      " \n",
+      "Description of Paralysis (brain hemorrhage) :\n",
       "Intracerebral hemorrhage (ICH) is when blood suddenly bursts into brain tissue, causing damage to your brain. Symptoms usually appear suddenly during ICH. They include headache, weakness, confusion, and paralysis, particularly on one side of your body.\n",
+      " \n",
       "Precautions to take are:\n",
       "massage\n",
       "eat healthy\n",
@@ -2123,22 +2072,6 @@
    "source": [
     "drug_info(d)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#drug_info(rfc_classifier.predict(standardized_test).item())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
