--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -24,16 +24,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "A function that takes in symptoms and creates a dataframe ready for prediction\n",
     "\"\"\"\n",
-    "def dataframe(symp):\n",
-    "    dic= {\"Symptom_1\":symp}\n",
-    "    df = pd.DataFrame(dic, index=)\n"
+    "def dataframe(dic):\n",
+    "    #dic= {\"Symptom_1\":symp}\n",
+    "    df = pd.DataFrame(dic, index=[0])\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympt = {\"Symptom_1\": \"rash\", \"Symptom_2\":\" vomiting\", \"Symptom_3\": \"headache\",\"Symptom_4\" : \"nodal_skin_eruptions\",\"Symptom_5\" : np.nan,\"Symptom_6\" : np.nan,\"Symptom_7\" : np.nan,\"Symptom_8\" : np.nan,\"Symptom_9\" : np.nan,\"Symptom_10\" : np.nan,\"Symptom_11\" : np.nan, \"Symptom_12\" : np.nan,\"Symptom_13\" : np.nan,\"Symptom_14\" : np.nan,\"Symptom_15\" : np.nan, \"Symptom_16\" : np.nan,\"Symptom_17\" : np.nan}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Symptom_1</th>\n",
+       "      <th>Symptom_2</th>\n",
+       "      <th>Symptom_3</th>\n",
+       "      <th>Symptom_4</th>\n",
+       "      <th>Symptom_5</th>\n",
+       "      <th>Symptom_6</th>\n",
+       "      <th>Symptom_7</th>\n",
+       "      <th>Symptom_8</th>\n",
+       "      <th>Symptom_9</th>\n",
+       "      <th>Symptom_10</th>\n",
+       "      <th>Symptom_11</th>\n",
+       "      <th>Symptom_12</th>\n",
+       "      <th>Symptom_13</th>\n",
+       "      <th>Symptom_14</th>\n",
+       "      <th>Symptom_15</th>\n",
+       "      <th>Symptom_16</th>\n",
+       "      <th>Symptom_17</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>rash</td>\n",
+       "      <td>vomiting</td>\n",
+       "      <td>headache</td>\n",
+       "      <td>nodal_skin_eruptions</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Symptom_1  Symptom_2 Symptom_3             Symptom_4  Symptom_5  Symptom_6  \\\n",
+       "0      rash   vomiting  headache  nodal_skin_eruptions        NaN        NaN   \n",
+       "\n",
+       "   Symptom_7  Symptom_8  Symptom_9  Symptom_10  Symptom_11  Symptom_12  \\\n",
+       "0        NaN        NaN        NaN         NaN         NaN         NaN   \n",
+       "\n",
+       "   Symptom_13  Symptom_14  Symptom_15  Symptom_16  Symptom_17  \n",
+       "0         NaN         NaN         NaN         NaN         NaN  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe(sympt)"
    ]
   },
   {
