--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "4        NaN        NaN        NaN        NaN        NaN        NaN  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,6 +1058,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The death of heart muscle due to the loss of blood supply. The loss of blood supply is usually caused by a complete blockage of a coronary artery, one of the arteries that supplies blood to the heart muscle.'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2[df_2[\"Disease\"] == \"Heart_attack\"][\"Description\"].item()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -1118,8 +1138,8 @@
        "      <td>Allergy</td>\n",
        "      <td>apply calamine</td>\n",
        "      <td>cover area with bandage</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>use ice to compress itching</td>\n",
+       "      <td>know and avoid allergens</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1149,19 +1169,19 @@
        "3  Hypothyroidism                     reduce stress   \n",
        "4       Psoriasis  wash hands with warm soapy water   \n",
        "\n",
-       "                   Precaution_2        Precaution_3  \\\n",
-       "0      consult nearest hospital    stop taking drug   \n",
-       "1               avoid oily food  avoid non veg food   \n",
-       "2       cover area with bandage                 NaN   \n",
-       "3                      exercise         eat healthy   \n",
-       "4  stop bleeding using pressure      consult doctor   \n",
+       "                   Precaution_2                 Precaution_3  \\\n",
+       "0      consult nearest hospital             stop taking drug   \n",
+       "1               avoid oily food           avoid non veg food   \n",
+       "2       cover area with bandage  use ice to compress itching   \n",
+       "3                      exercise                  eat healthy   \n",
+       "4  stop bleeding using pressure               consult doctor   \n",
        "\n",
-       "                  Precaution_4  \n",
-       "0                    follow up  \n",
-       "1           keep mosquitos out  \n",
-       "2  use ice to compress itching  \n",
-       "3             get proper sleep  \n",
-       "4                   salt baths  "
+       "               Precaution_4  \n",
+       "0                 follow up  \n",
+       "1        keep mosquitos out  \n",
+       "2  know and avoid allergens  \n",
+       "3          get proper sleep  \n",
+       "4                salt baths  "
       ]
      },
      "execution_count": 4,
