--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -9,17 +9,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score\n",
-    "from sklearn.metrics import precision_score, recall_score, f1_score"
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import streamlit as st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.12.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(st. __version__)"
    ]
   },
   {
