--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,19 +24,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.12.2\n"
+     "ename": "NameError",
+     "evalue": "name 'sklearn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Zaynab\\GitHub\\Personal\\Disease symptom prediction\\Disease-Symptom-Prediction\\sympt.ipynb Cell 3\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#Y113sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(sklearn\u001b[39m.\u001b[39m __version__)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sklearn' is not defined"
      ]
     }
    ],
    "source": [
-    "print(st. __version__)"
+    "print(sklearn. __version__)"
    ]
   },
   {
