--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -9,109 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
-    "import streamlit as st"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sklearn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Zaynab\\GitHub\\Personal\\Disease symptom prediction\\Disease-Symptom-Prediction\\sympt.ipynb Cell 3\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/sympt.ipynb#Y113sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(sklearn\u001b[39m.\u001b[39m __version__)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sklearn' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(sklearn. __version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 'Green', 1: 'Yellow'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "{0:\"Green\",\n",
-    "1:\"Yellow\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2456267975.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [8]\u001b[1;36m\u001b[0m\n\u001b[1;33m    0:\"Green\"\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [\n",
-    "0:\"Green\"\n",
-    "1:\"Yellow\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2510782685.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [10]\u001b[1;36m\u001b[0m\n\u001b[1;33m    0:\"Green\"\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "def convert(lst):\n",
-    "   res_dict = {}\n",
-    "   for i in range(0, len(lst), 2):\n",
-    "       res_dict[lst[i]] = lst[i + 1]\n",
-    "   return res_dict\n",
-    " \n",
-    "lst =  [\n",
-    "0:\"Green\"\n",
-    "1:\"Yellow\"\n",
-    "]\n",
-    "print(convert(lst))"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import streamlit as st\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.losses import SparseCategoricalCrossentropy\n"
    ]
   },
   {
@@ -2304,7 +2225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
