--- a/disease-classification-after-pca-using-ann-and-rf.ipynb
+++ b/disease-classification-after-pca-using-ann-and-rf.ipynb
@@ -21,6 +21,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38f0563b",
+   "metadata": {},
+   "source": [
+    "Test Notebook from Kaggle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "be6bc7fa",
