--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,306 +501,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['abdominal_pain',\n",
-       " 'abnormal_menstruation',\n",
-       " 'acidity',\n",
-       " 'acute_liver_failure',\n",
-       " 'altered_sensorium',\n",
-       " 'anxiety',\n",
-       " 'back_pain',\n",
-       " 'belly_pain',\n",
-       " 'blackheads',\n",
-       " 'bladder_discomfort',\n",
-       " 'blister',\n",
-       " 'blood_in_sputum',\n",
-       " 'bloody_stool',\n",
-       " 'blurred_and_distorted_vision',\n",
-       " 'breathlessness',\n",
-       " 'brittle_nails',\n",
-       " 'bruising',\n",
-       " 'burning_micturition',\n",
-       " 'chest_pain',\n",
-       " 'chills',\n",
-       " 'cold_hands_and_feets',\n",
-       " 'coma',\n",
-       " 'congestion',\n",
-       " 'constipation',\n",
-       " 'continuous_feel_of_urine',\n",
-       " 'continuous_sneezing',\n",
-       " 'cough',\n",
-       " 'cramps',\n",
-       " 'dark_urine',\n",
-       " 'dehydration',\n",
-       " 'depression',\n",
-       " 'diarrhoea',\n",
-       " 'dischromic__patches',\n",
-       " 'distention_of_abdomen',\n",
-       " 'dizziness',\n",
-       " 'drying_and_tingling_lips',\n",
-       " 'enlarged_thyroid',\n",
-       " 'excessive_hunger',\n",
-       " 'extra_marital_contacts',\n",
-       " 'family_history',\n",
-       " 'fast_heart_rate',\n",
-       " 'fatigue',\n",
-       " 'fluid_overload',\n",
-       " 'foul_smell_of_urine',\n",
-       " 'headache',\n",
-       " 'high_fever',\n",
-       " 'hip_joint_pain',\n",
-       " 'history_of_alcohol_consumption',\n",
-       " 'increased_appetite',\n",
-       " 'indigestion',\n",
-       " 'inflammatory_nails',\n",
-       " 'internal_itching',\n",
-       " 'irregular_sugar_level',\n",
-       " 'irritability',\n",
-       " 'irritation_in_anus',\n",
-       " 'itching',\n",
-       " 'joint_pain',\n",
-       " 'knee_pain',\n",
-       " 'lack_of_concentration',\n",
-       " 'lethargy',\n",
-       " 'loss_of_appetite',\n",
-       " 'loss_of_balance',\n",
-       " 'loss_of_smell',\n",
-       " 'malaise',\n",
-       " 'mild_fever',\n",
-       " 'mood_swings',\n",
-       " 'movement_stiffness',\n",
-       " 'mucoid_sputum',\n",
-       " 'muscle_pain',\n",
-       " 'muscle_wasting',\n",
-       " 'muscle_weakness',\n",
-       " 'nausea',\n",
-       " 'neck_pain',\n",
-       " 'nodal_skin_eruptions',\n",
-       " 'obesity',\n",
-       " 'pain_behind_the_eyes',\n",
-       " 'pain_during_bowel_movements',\n",
-       " 'pain_in_anal_region',\n",
-       " 'painful_walking',\n",
-       " 'palpitations',\n",
-       " 'passage_of_gases',\n",
-       " 'patches_in_throat',\n",
-       " 'phlegm',\n",
-       " 'polyuria',\n",
-       " 'prominent_veins_on_calf',\n",
-       " 'puffy_face_and_eyes',\n",
-       " 'pus_filled_pimples',\n",
-       " 'receiving_blood_transfusion',\n",
-       " 'receiving_unsterile_injections',\n",
-       " 'red_sore_around_nose',\n",
-       " 'red_spots_over_body',\n",
-       " 'redness_of_eyes',\n",
-       " 'restlessness',\n",
-       " 'runny_nose',\n",
-       " 'rusty_sputum',\n",
-       " 'scurring',\n",
-       " 'shivering',\n",
-       " 'silver_like_dusting',\n",
-       " 'sinus_pressure',\n",
-       " 'skin_peeling',\n",
-       " 'skin_rash',\n",
-       " 'slurred_speech',\n",
-       " 'small_dents_in_nails',\n",
-       " 'spinning_movements',\n",
-       " 'spotting__urination',\n",
-       " 'stiff_neck',\n",
-       " 'stomach_bleeding',\n",
-       " 'stomach_pain',\n",
-       " 'sunken_eyes',\n",
-       " 'sweating',\n",
-       " 'swelled_lymph_nodes',\n",
-       " 'swelling_joints',\n",
-       " 'swelling_of_stomach',\n",
-       " 'swollen_blood_vessels',\n",
-       " 'swollen_extremeties',\n",
-       " 'swollen_legs',\n",
-       " 'throat_irritation',\n",
-       " 'toxic_look_(typhos)',\n",
-       " 'ulcers_on_tongue',\n",
-       " 'unsteadiness',\n",
-       " 'visual_disturbances',\n",
-       " 'vomiting',\n",
-       " 'watering_from_eyes',\n",
-       " 'weakness_in_limbs',\n",
-       " 'weakness_of_one_body_side',\n",
-       " 'weight_gain',\n",
-       " 'weight_loss',\n",
-       " 'yellow_crust_ooze',\n",
-       " 'yellow_urine',\n",
-       " 'yellowing_of_eyes',\n",
-       " 'yellowish_skin']"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "v = sorted(sym)\n",
-    "v"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['skin_rash',\n",
-       " 'pus_filled_pimples',\n",
-       " 'muscle_wasting',\n",
-       " 'patches_in_throat',\n",
-       " 'vomiting',\n",
-       " 'yellowish_skin',\n",
-       " 'continuous_sneezing',\n",
-       " 'shivering',\n",
-       " 'muscle_weakness',\n",
-       " 'stiff_neck',\n",
-       " 'fatigue',\n",
-       " 'cough',\n",
-       " 'back_pain',\n",
-       " 'weakness_in_limbs',\n",
-       " 'itching',\n",
-       " 'chills',\n",
-       " 'weight_loss',\n",
-       " 'constipation',\n",
-       " 'pain_during_bowel_movements',\n",
-       " 'sunken_eyes',\n",
-       " 'stomach_pain',\n",
-       " 'acidity',\n",
-       " 'breathlessness',\n",
-       " 'joint_pain',\n",
-       " 'headache',\n",
-       " 'chest_pain',\n",
-       " 'mood_swings',\n",
-       " 'weight_gain',\n",
-       " 'high_fever',\n",
-       " 'indigestion',\n",
-       " 'neck_pain',\n",
-       " 'burning_micturition',\n",
-       " 'bladder_discomfort',\n",
-       " 'cramps',\n",
-       " 'blackheads',\n",
-       " 'abdominal_pain',\n",
-       " 'swelling_joints',\n",
-       " 'restlessness',\n",
-       " 'pain_in_anal_region',\n",
-       " 'nodal_skin_eruptions',\n",
-       " 'dehydration',\n",
-       " 'ulcers_on_tongue',\n",
-       " 'sweating',\n",
-       " 'lethargy',\n",
-       " 'nausea',\n",
-       " 'dizziness',\n",
-       " 'anxiety',\n",
-       " 'cold_hands_and_feets',\n",
-       " 'blister',\n",
-       " 'knee_pain',\n",
-       " 'weakness_of_one_body_side',\n",
-       " 'loss_of_appetite',\n",
-       " 'skin_peeling',\n",
-       " 'foul_smell_of_urine',\n",
-       " 'bruising',\n",
-       " 'scurring',\n",
-       " 'extra_marital_contacts',\n",
-       " 'swelling_of_stomach',\n",
-       " 'watering_from_eyes',\n",
-       " 'movement_stiffness',\n",
-       " 'bloody_stool',\n",
-       " 'dischromic__patches',\n",
-       " 'diarrhoea',\n",
-       " 'dark_urine',\n",
-       " 'loss_of_balance',\n",
-       " 'red_sore_around_nose',\n",
-       " 'blurred_and_distorted_vision',\n",
-       " 'hip_joint_pain',\n",
-       " 'altered_sensorium',\n",
-       " 'spinning_movements',\n",
-       " 'silver_like_dusting',\n",
-       " 'continuous_feel_of_urine',\n",
-       " 'obesity',\n",
-       " nan,\n",
-       " 'distention_of_abdomen',\n",
-       " 'painful_walking',\n",
-       " 'family_history',\n",
-       " 'irregular_sugar_level',\n",
-       " 'irritation_in_anus',\n",
-       " 'spotting__urination',\n",
-       " 'yellowing_of_eyes',\n",
-       " 'lack_of_concentration',\n",
-       " 'yellow_crust_ooze',\n",
-       " 'excessive_hunger',\n",
-       " 'passage_of_gases',\n",
-       " 'small_dents_in_nails',\n",
-       " 'swollen_legs',\n",
-       " 'history_of_alcohol_consumption',\n",
-       " 'mucoid_sputum',\n",
-       " 'unsteadiness',\n",
-       " 'internal_itching',\n",
-       " 'inflammatory_nails',\n",
-       " 'swollen_blood_vessels',\n",
-       " 'fluid_overload',\n",
-       " 'swelled_lymph_nodes',\n",
-       " 'fast_heart_rate',\n",
-       " 'puffy_face_and_eyes',\n",
-       " 'depression',\n",
-       " 'malaise',\n",
-       " 'prominent_veins_on_calf',\n",
-       " 'mild_fever',\n",
-       " 'yellow_urine',\n",
-       " 'enlarged_thyroid',\n",
-       " 'muscle_pain',\n",
-       " 'irritability',\n",
-       " 'phlegm',\n",
-       " 'increased_appetite',\n",
-       " 'drying_and_tingling_lips',\n",
-       " 'brittle_nails',\n",
-       " 'visual_disturbances',\n",
-       " 'throat_irritation',\n",
-       " 'pain_behind_the_eyes',\n",
-       " 'polyuria',\n",
-       " 'slurred_speech',\n",
-       " 'swollen_extremeties',\n",
-       " 'toxic_look_(typhos)',\n",
-       " 'red_spots_over_body',\n",
-       " 'redness_of_eyes',\n",
-       " 'receiving_blood_transfusion',\n",
-       " 'acute_liver_failure',\n",
-       " 'abnormal_menstruation',\n",
-       " 'rusty_sputum',\n",
-       " 'belly_pain',\n",
-       " 'sinus_pressure',\n",
-       " 'receiving_unsterile_injections',\n",
-       " 'coma',\n",
-       " 'palpitations',\n",
-       " 'runny_nose',\n",
-       " 'stomach_bleeding',\n",
-       " 'congestion',\n",
-       " 'loss_of_smell',\n",
-       " 'blood_in_sputum']"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "uniq_symp(df_1)\n",
-    "\n",
-    "\n"
+    "v = sorted(sym)"
    ]
   },
   {
@@ -810,174 +515,6 @@
    "outputs": [],
    "source": [
     "'abdominal_pain','abnormal_menstruation','acidity','acute_liver_failure','altered_sensorium', 'anxiety','back_pain','belly_pain','blackheads','bladder_discomfort','blister','blood_in_sputum','bloody_stool','blurred_and_distorted_vision','breathlessness','brittle_nails','bruising','burning_micturition','chest_pain','chills', 'cold_hands_and_feets','coma','congestion','constipation','continuous_feel_of_urine','continuous_sneezing','cough','cramps','dark_urine','dehydration','depression', 'diarrhoea','dischromic__patches','distention_of_abdomen','dizziness','drying_and_tingling_lips','enlarged_thyroid','excessive_hunger','extra_marital_contacts','family_history', 'fast_heart_rate','fatigue', 'fluid_overload','foul_smell_of_urine','headache','high_fever','hip_joint_pain', 'history_of_alcohol_consumption','increased_appetite','indigestion','inflammatory_nails','internal_itching','irregular_sugar_level','irritability','irritation_in_anus','itching','joint_pain','knee_pain','lack_of_concentration', 'lethargy','loss_of_appetite','loss_of_balance', 'loss_of_smell','malaise','mild_fever','mood_swings','movement_stiffness', 'mucoid_sputum','muscle_pain','muscle_wasting','muscle_weakness','nausea','neck_pain','nodal_skin_eruptions','obesity','pain_behind_the_eyes','pain_during_bowel_movements','pain_in_anal_region','painful_walking','palpitations','passage_of_gases','patches_in_throat','phlegm','polyuria','prominent_veins_on_calf','puffy_face_and_eyes','pus_filled_pimples','receiving_blood_transfusion','receiving_unsterile_injections','red_sore_around_nose','red_spots_over_body','redness_of_eyes','restlessness','runny_nose','rusty_sputum','scurring','shivering','silver_like_dusting','sinus_pressure','skin_peeling','skin_rash','slurred_speech','small_dents_in_nails','spinning_movements','spotting__urination','stiff_neck','stomach_bleeding','stomach_pain','sunken_eyes','sweating','swelled_lymph_nodes','swelling_joints','swelling_of_stomach','swollen_blood_vessels','swollen_extremeties','swollen_legs','throat_irritation','toxic_look_(typhos)','ulcers_on_tongue','unsteadiness','visual_disturbances','vomiting','watering_from_eyes','weakness_in_limbs','weakness_of_one_body_side','weight_gain','weight_loss','yellow_crust_ooze','yellow_urine','yellowing_of_eyes','yellowish_skin'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = df_1[\"Symptom_1\"].unique().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = df_1[\"Symptom_2\"].unique().tolist()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['skin_rash', 'pus_filled_pimples', 'muscle_wasting',\n",
-       "       'patches_in_throat', 'vomiting', 'yellowish_skin',\n",
-       "       'continuous_sneezing', 'shivering', 'muscle_weakness',\n",
-       "       'stiff_neck', 'fatigue', 'cough', 'back_pain', 'weakness_in_limbs',\n",
-       "       'itching', 'chills', 'weight_loss', 'constipation',\n",
-       "       'pain_during_bowel_movements', 'sunken_eyes', 'stomach_pain',\n",
-       "       'acidity', 'breathlessness', 'joint_pain', 'headache',\n",
-       "       'chest_pain', 'mood_swings', 'weight_gain', 'high_fever',\n",
-       "       'indigestion', 'neck_pain', 'burning_micturition',\n",
-       "       'bladder_discomfort', 'cramps', 'blackheads', 'abdominal_pain',\n",
-       "       'swelling_joints', 'restlessness', 'pain_in_anal_region',\n",
-       "       'nodal_skin_eruptions', 'dehydration', 'ulcers_on_tongue',\n",
-       "       'sweating', 'lethargy', 'nausea', 'dizziness', 'anxiety',\n",
-       "       'cold_hands_and_feets', 'blister', 'knee_pain',\n",
-       "       'weakness_of_one_body_side', 'loss_of_appetite', 'skin_peeling',\n",
-       "       'foul_smell_of_urine', 'bruising'], dtype=object)"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c = a+b\n",
-    "symp = {\"Symptoms\": c}\n",
-    "df = pd.DataFrame(symp, index=range(len(c)))\n",
-    "df[\"Symptoms\"].unique()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = a+b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "82"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "symp = {\"Symptomps\": c}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Symptoms</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>skin_rash</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>pus_filled_pimples</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>muscle_wasting</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>patches_in_throat</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>vomiting</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Symptoms\n",
-       "0           skin_rash\n",
-       "1  pus_filled_pimples\n",
-       "2      muscle_wasting\n",
-       "3   patches_in_throat\n",
-       "4            vomiting"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "symp = {\"Symptoms\": c}\n",
-    "df = pd.DataFrame(symp, index=range(len(c)))\n",
-    "df.head()"
    ]
   },
   {
@@ -2225,7 +1762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4
  },
